--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Islam - Portfolio</title>
+    <title>E.Islam || Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@400;600;700&display=swap" rel="stylesheet">
@@ -338,10 +338,11 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-            strings: ['Cybersecurity Engineer', 'Software Engineering Student',],
+            strings: ['Software Engineering StudentCybersecurity Engineer', 'Cybersecurity Engineer',],
             typeSpeed: 50,
         });
     </script>
 </body>
+
 
 </html>
