--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-            strings: ['Software Engineering StudentCybersecurity Engineer', 'Cybersecurity Engineer',],
+            strings: ['Software Engineering Student', 'Cybersecurity Engineer',],
             typeSpeed: 50,
         });
     </script>
@@ -346,3 +346,4 @@
 
 
 </html>
+
